# hand-gesture-recognition

./: HandTracker.py  pyproject.toml
