[tool.poetry]
name = "handtracking"
version = "0.1.0"
description = ""
authors = ["itaySkills <itays@academy-skills.com>"]

[tool.poetry.dependencies]
python = "^3.8, <3.11"
opencv-python = "^4.6.0"
mediapipe = "^0.8.10"
tensorflow = "^2.9.1"
keras = "^2.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
